# ResearchGuard

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.flowguard/: adoption_log.jsonl  logicguard_skill_contract_model.py  project.toml  researchguard_skill_contract_model.py  researchguard_skill_contract_model_common.py  researchguard_skillguard_maintenance_model.py  researchguard_skillguard_maintenance_preflight.md  researchguard_suite_model.json  researchguard_suite_model.py  run_researchguard_skillguard_maintenance_model.py  run_researchguard_suite_model.py  sourceguard_content_anchor_oracle_model.py  sourceguard_skill_contract_model.py  traceguard_skill_contract_model.py
.github/workflows/: ci.yml
.skillguard/: author-project.json  researchguard-suite-validation-plan.json
docs/: diagram_semantics.md  flowguard_adoption_log.md  project_library_viewer.md  source_library_workflow.md  writing_workflow.md
examples/logic/: ai_generated_answer_audit.yaml  engineering_efficiency_argument.yaml  literature_review_argument.yaml  policy_argument.yaml  scientific_causal_claim.yaml  structured_artifact_deck.yaml  structured_report_outline.md
migration/: __init__.py  build_consumer_skills.py  canonicalize_current_identifiers.py  copy_frozen_resources.py  copy_frozen_sources.py  copy_frozen_tests.py  migrate_source_gap_state.py  source-inventory.json
scripts/: build_skillguard_contracts.py  check_researchguard_suite.py  check_zero_residuals.py  install_researchguard.py  reseal_member_catalogs.py  reseal_trace_example_purpose.py
tests/: conftest.py  test_install_researchguard.py  test_root_cli.py  test_skill_suite.py  test_suite_routing.py  test_zero_residuals.py
(+339 files in other folders)
