[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchguard"
version = "0.1.0"
description = "One versioned research guard suite for argument, source-discovery, and evidence-trace reasoning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yingxu Liu" }]
keywords = [
  "research",
  "reasoning",
  "argumentation",
  "evidence",
  "sources",
  "trace",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing",
]
dependencies = [
  "numpy>=1.26",
  "osqp>=1.0,<2",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
researchguard = "researchguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["researchguard*"]

[tool.setuptools.package-data]
"researchguard.logic_template_packs" = [
  "catalog/*.json",
  "catalog/*.md",
  "catalog/profiles/*.json",
]
"researchguard.logic_viewer" = ["assets/*"]
"researchguard.source" = ["template_pack_catalog.json"]
"researchguard.trace" = ["template_pack_catalog.json", "guard_model/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

